Correct minor errors

--- a/optimset.bib
+++ b/optimset.bib
@@ -85,7 +85,7 @@
     author       = {Ghanbari, H. and Scheinberg, K.},
     year         = 2017,
     number       = {17T-005},
-    institution  = {COR{\@}L},
+    institution  = {COR@L},
 }
 
 @article{Hooke_Jeeves_1961,
