--- a/optimset.tex
+++ b/optimset.tex
@@ -1,6 +1,6 @@
 %% Makefile
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
-\documentclass[draft]{article}
+\documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper]{geometry}
 \usepackage[british]{babel}
@@ -200,30 +200,30 @@ when classical or generalized derivatives of the objective function~$\obj \colon
 There are many examples of applications of this kind, such as machine learning~\cite{Ghanbari_Scheinberg_2017}, reinforcement learning~\cite{Qian_Yu_2021}, particle physics~\cite{Eldred_Etal_2022}, and aircraft engineering~\cite{Gazaix_Etal_2019}.
 
 Broadly speaking, \gls{dfo} methods can be divided into two categories: direct-search and model-based methods~\cite{Conn_Scheinberg_Vicente_2009}.
-Direct-search methods~\cite{Kolda_Lewis_Torczon_2003} generate sample points in the search space around the current iterate, and select the next iterate among these points based on simple comparisons.
+Direct-search methods~\cite{Kolda_Lewis_Torczon_2003} generate sample points in the search space around the current iterate and select the next iterate among these points based on simple comparisons.
 Examples of famous direct-search methods include the Hooke-Jeeves method~\cite{Hooke_Jeeves_1961}, the Nelder-Mead method~\cite{Nelder_Mead_1965}, the \solvername{gps} method~\cite{Booker_Etal_1999}, the \solvername{mads} method~\cite{Audet_Dennis_2006}, and \solvername{bfo}~\cite{Porcelli_Toint_2017,Porcelli_Toint_2022}.
-Meanwhile, model-based methods~\cite[Part~4]{Audet_Hare_2017} approximate the objective and constraint functions by simple models around the current iterate, and select the next iterate by examining these approximations.
+Meanwhile, model-based methods~\cite[Part~4]{Audet_Hare_2017} approximate the objective and constraint functions using simple models around the current iterate and select the next one by examining these approximations.
 Since these approximations are local, the methods are embedded in globalization strategies to ensure convergence.
-The trust-region framework~\cite{Conn_Gould_Toint_2000} is a popular choice for this purpose, and is the one under consideration in this paper.
+The trust-region framework~\cite{Conn_Gould_Toint_2000} is a popular choice for this purpose and is the one under consideration in this paper.
 Examples of trust-region methods include the method of Conn and Toint~\cite{Conn_Toint_1996}, \solvername{mnh}~\cite{Wild_2008}, Powell's \gls{dfo} methods~\cite{Powell_1994,Powell_2002,Powell_2006,Powell_2009}, and \solvername{cobyqa}~\cite{Ragonneau_2022,Ragonneau_Zhang_2023}.
 
-Model-based \gls{dfo} methods and in particular trust-region \gls{dfo} methods often employ polynomial interpolation schemes to approximate the objective and constraint functions.
+Model-based \gls{dfo} methods, and particularly trust-region \gls{dfo} methods, often employ polynomial interpolation schemes to approximate the objective and constraint functions.
 These methods maintain an interpolation set~$\xpt[k] \subseteq \R^n$, where~$k$ denotes the iteration number, and build a model~$\objm[k]$ of~$\obj$ according to the interpolation conditions
 \begin{equation}
     \label{eq:intp-cond}
     \objm[k](y) = \obj(y), \quad y \in \xpt[k].
 \end{equation}
 We assume in what follows that the models~$\objm[k]$ are quadratic, and we denote by~$\qpoly$ the space of quadratic polynomials.
-Such models are often employed in practice, for example by \solvername{uobyqa}~\cite{Powell_2002}, \solvername{newuoa}~\cite{Powell_2006}, \solvername{bobyqa}~\cite{Powell_2009}, \solvername{lincoa}, \solvername{mnh}, and \solvername{cobyqa}.
-Clearly, if the interpolation conditions~\eqref{eq:intp-cond} do not contradict each others,~$\objm[k]$ is uniquely defined by~\eqref{eq:intp-cond} only if
+Such models are often employed in practice, for example, by \solvername{uobyqa}~\cite{Powell_2002}, \solvername{newuoa}~\cite{Powell_2006}, \solvername{bobyqa}~\cite{Powell_2009}, \solvername{lincoa}, \solvername{mnh}, and \solvername{cobyqa}.
+Clearly, if the interpolation conditions~\eqref{eq:intp-cond} do not contradict each other,~$\objm[k]$ is uniquely defined by~\eqref{eq:intp-cond} only if
 \begin{equation*}
     \card\xpt[k] = \dim\qpoly = \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
-This scheme, referred to as fully-determined interpolation, is the one employed by \solvername{uobyqa}.
+This scheme, referred to as fully-determined interpolation, is employed by \solvername{uobyqa}.
 However, the first iteration of this method requires~$\bigo(n^2)$ function evaluations to construct the initial model~$\objm[0]$.
 This is impracticable in practice unless~$n$ is small.
 Therefore, modern interpolation-based \gls{dfo} methods employ fewer interpolation points, giving rise to so-called underdetermined interpolation.
-To uniquely define~$\objm[k]$ in this case, it is frequently set to a solution to a variational problem of the form
+To uniquely define~$\objm[k]$ in this case, it is frequently set to a solution to a problem of the form
 \begin{equation}
     \label{eq:intp-var}
     \begin{aligned}
@@ -243,7 +243,7 @@ where~$\norm{\cdot}_{\mathsf{F}}$ denotes the Frobenius norm, and \solvername{ne
     \mathcal{F}^k(Q) = \norm[\big]{\nabla^2 Q - \nabla^2 \objm[k - 1]}_{\mathsf{F}}^2,
 \end{equation}
 with~$\objm[-1] = 0$.
-The latter functional is inspired by least-change property of quasi-Newton updates~\cite{Dennis_Schnabel_1979}.
+The latter functional is inspired by the least-change property of quasi-Newton updates~\cite{Dennis_Schnabel_1979}.
 The variational problem defined by~\eqref{eq:intp-var} and~\eqref{eq:df-psb} is known as the derivative-free symmetric Broyden update (see~\cite{Powell_2013},~\cite[\S~3.6]{Zhang_2012}, and~\cite[\S~2.4.2]{Ragonneau_2022}).
 The two underdetermined interpolation schemes assume that
 \begin{equation*}
@@ -251,20 +251,20 @@ The two underdetermined interpolation schemes assume that
 \end{equation*}
 Otherwise,~$\objm[k]$ could not be uniquely defined (or even not defined at all).
 In practice, methods that employ these schemes often enforce~$\card\xpt[k] \ge n + 2$ as all the models~$\objm[k]$ would be linear if~$\card\xpt[k] = n + 1$.
-Finally, if the constraint functions underlying the feasible set~$\fset$ in~\eqref{eq:nlp} are nonlinear, model-based \gls{dfo} methods usually approximates them using similar techniques.
+Finally, if the constraint functions underlying the feasible set~$\fset$ in~\eqref{eq:nlp} are nonlinear, model-based \gls{dfo} methods usually approximate them using similar techniques.
 
 Normally, interpolation-based \gls{dfo} methods do not build the interpolation point~$\xpt[k]$ \emph{ab initio} at each iteration.
 Instead, they build an initial interpolation set~$\xpt[0]$ and then  update~$\xpt[k]$ to build~$\xpt[k + 1]$.
 For example, only one point differs between~$\xpt[k]$ and~$\xpt[k + 1]$ in Powell's \gls{dfo} methods and \solvername{cobyqa} during usual iterations.
-This mechanism prevents the methods from performing unnecessary function evaluations, which are normally considered as the principal measure of complexity of \gls{dfo} methods.
+This mechanism prevents the methods from performing unnecessary function evaluations, which are normally considered the principal measure of complexity of \gls{dfo} methods.
 However, it is clear that the initial interpolation set~$\xpt[0]$ must be carefully chosen, as it will impact the optimization method for many iterations.
 In the unconstrained case, i.e., when~$\fset = \R^n$ in~\eqref{eq:nlp}, Powell proposed an initial interpolation set~$\xpt[0]$ that is employed by many interpolation-based \gls{dfo} methods, including \solvername{uobyqa}, \solvername{newuoa}, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
-This paper shows that this interpolation set is optimal in a well-poisedness sense detailed in Section~\ref{sec:well-poisedness}.
+This paper shows that this interpolation set is optimal in a well-poisedness sense, detailed in Section~\ref{sec:well-poisedness}.
 
 This paper is organized as follows.
 Section~\ref{sec:well-poisedness} introduces the notion of $\Lambda$-poisedness of interpolation sets in the underdetermined sense.
-This notion is then employed in Section~\ref{sec:main-result} to study the initial interpolation set proposed by Powell.
-Theorem~\ref{thm:lambda-p} is the main result of this paper, and provides explicit bounds for the constant of~$\Lambda$-poisedness of the interpolation set under study.
+This notion is then employed in Section~\ref{sec:main-result} to study initial interpolation sets proposed by Powell.
+Theorem~\ref{thm:lambda-p} is the main result of this paper and provides explicit bounds for the constant of~$\Lambda$-poisedness of the interpolation set under study.
 
 \section{Well-poisedness of interpolation sets}
 \label{sec:well-poisedness}
@@ -273,7 +273,7 @@ In this section, we denote by
 \begin{equation*}
     \xpt = \set{y^1, y^2, \dots, y^m} \subseteq \R^n,
 \end{equation*}
-a set, and we interpolate the objective function~$\obj$ by a quadratic polynomial~$\objm$ on~$\xpt$, i.e.,
+a set, and we interpolate the function~$\obj$ by a quadratic polynomial~$\objm$ on~$\xpt$, i.e.,
 \begin{equation}
     \label{eq:intp-cond-gen}
     \objm(y^i) = \obj(y^i), \quad i \in \set{1, 2, \dots, m}.
@@ -281,7 +281,7 @@ a set, and we interpolate the objective function~$\obj$ by a quadratic polynomia
 More precisely, we let~$\objm$ solve~\eqref{eq:intp-var}, where~$\mathcal{F}^k$ is defined by~\eqref{eq:mnh}.
 Note that if~$\xpt$ is seen as an initial interpolation set~$\xpt[0]$, then~$\objm$ denotes the initial model~$\objm[0]$, and the functional~$\mathcal{F}^k = \mathcal{F}^0$ is equivalent to the one defined by~\eqref{eq:df-psb}.
 In other words,~$\objm$ is also obtained by the derivative-free symmetric Broyden update.
-The following definition guarantees that the interpolation problem is always well-posed.
+The following definition guarantees that the interpolation problem is always well-posed and that~$\objm$ exists and is unique.
 
 \begin{definition}[Poisedness]
     The set~$\xpt$ is \emph{poised} in the minimum-norm sense if the solution to problem~\eqref{eq:intp-var} exists and is unique for any real-valued function~$\obj$.
@@ -291,7 +291,7 @@ As we mentioned earlier, a necessary condition for~$\xpt$ to be poised is
 \begin{equation*}
     n + 1 \le m \le \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
-Moreover, observe that the KKT system for the variational problem~\eqref{eq:intp-var} is linear with respect to the coefficient of~$\objm$.
+Moreover, observe that the KKT system for the variational problem~\eqref{eq:intp-var} is linear with respect to the coefficients of~$\objm$.
 Hence, the poisedness of~$\xpt$ is related to the nonsingularity of the coefficient matrix of this KKT system.
 Intuitively, the interpolation set~$\xpt$ can be said well-poised if this matrix is well-conditioned.
 To formalize this intuition, we first introduce the notion of minimum-norm Lagrange polynomials.
@@ -339,8 +339,8 @@ Therefore, the notion of~$\Lambda$-poisedness formalizes the intuitive notion of
 \section{Optimality of Powell's initial interpolation set}
 \label{sec:main-result}
 
-Recall that Powell proposed an initial interpolation set~$\xpt[0]$ that is employed by many interpolation-based \gls{dfo} methods and in particular trust-region methods, including \solvername{uobyqa}, \solvername{newuoa}, and in the unconstrained case, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
-This section first presents this interpolation set, and then shows that it is optimal in terms of the constant of~$\Lambda$-poisedness.
+Recall that Powell proposed an initial interpolation set~$\xpt[0]$ that is employed by many interpolation-based \gls{dfo} methods, and particularly trust-region methods, including \solvername{uobyqa}, \solvername{newuoa}, and in the unconstrained case, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
+This section first presents this interpolation set and then shows that it is optimal in terms of the constant of~$\Lambda$-poisedness.
 
 \subsection{Description of the initial interpolation set}
 
@@ -364,12 +364,12 @@ The initial interpolation sets~$\xpt[0]_m \subseteq \R^n$ for each~$m \in \set{n
 \end{equation}
 The default value for~$m$ proposed by Powell is~$2n + 1$, i.e., he employs~$\xpt[0] = \xpt[0]_{2n + 1}$.
 This is a natural choice, as the corresponding interpolation set is geometrically appealing.
-It consists indeed of the origin and equidistant points to the origin on the positive and negative coordinate directions.
+It consists indeed of the origin and equidistant points to the origin in the positive and negative coordinate directions.
 In what follows, we provide a theory that justifies this natural choice.
 
 \subsection{Optimality of the interpolation set}
 
-All the methods presented above that are using the initial interpolation set~$\xpt[0]_{2n + 1}$ are trust-region methods, and~$\Delta$ denotes the initial trust-region radius.
+All the methods presented above that use the initial interpolation set~$\xpt[0]_{2n + 1}$ are trust-region methods, and~$\Delta$ denotes the initial trust-region radius.
 Therefore, it is legitimate to study the properties of~$\xpt[0]_m$ for different values of~$m$ in the closed~$\ell_p$-norm ball of radius~$\Delta$, namely
 \begin{equation*}
     \mathcal{B}_p(\Delta) = \set{x \in \R^n : \norm{x}_p \le \Delta},
@@ -385,7 +385,7 @@ According to Definition~\ref{def:lambda-p}, the set~$\xpt[0]_m$ is~$\Lambda_p$-p
 \begin{equation*}
     \Lambda_p = \max_{1 \le i \le m} \max_{\norm{x}_p \le \Delta} \abs[\big]{\lagp[i](x)},
 \end{equation*}
-where~$\lagp[i]$ is the~$i$th minimum-norm Lagrange polynomial associated with~$\xpt[0]_m$ (see Definition~\ref{def:min-norm-lagp}) for~$i \in \set{1, 2, \dots, m}$.
+where~$\lagp[i]$ is the~$i$th minimum-norm Lagrange polynomial associated with~$\xpt[0]_m$ for~$i \in \set{1, 2, \dots, m}$.
 
 To study~$\Lambda_p$, we first present explicit formulae for~$\lagp[i]$ for all~$i \in \set{1, 2, \dots, m}$.
 These formulae are given in~\cite[\S~3]{Powell_2006}, without a proof.
@@ -447,11 +447,11 @@ The next lemma simplifies the expression of~$\Lambda_p$ for further computations
 \end{lemma}
 
 \begin{proof}
-    For each~$i \in \set{2, 3, \dots, n + 1}$, according to Lemma~\ref{lem:lagp},~$\lagp[i](x)$ depends only on~$x_{i - 1}$ for all~$x \in \R^n$, and hence
+    For each~$i \in \set{2, 3, \dots, n + 1}$, according to Lemma~\ref{lem:lagp},~$\lagp[i](x)$ only depends on~$x_{i - 1}$ for all~$x \in \R^n$, and hence
     \begin{equation*}
         \max_{\norm{x}_p \le \Delta} \abs[\big]{\lagp[i](x)} = \max_{t \in [-\Delta, \Delta]} \abs[\big]{\lagp[i](t e_{i - 1})} = 1.
     \end{equation*}
-    Similarly, for each~$i \in \set{n + 2, n + 3, \dots, m}$, since~$\lagp[i](x)$ depends only on~$x_{i - n - 1}$ for all~$x \in \R^n$, we have
+    For each~$i \in \set{n + 2, n + 3, \dots, m}$, since~$\lagp[i](x)$ only depends on~$x_{i - n - 1}$ for all~$x \in \R^n$, we have
     \begin{equation*}
         \max_{\norm{x}_p \le \Delta} \abs[\big]{\lagp[i](x)} = \max_{t \in [-\Delta, \Delta]} \abs[\big]{\lagp[i](t e_{i - n - 1})} = 1.
     \end{equation*}
@@ -477,7 +477,7 @@ We are now equipped to develop bounds on~$\Lambda_p$ in the general case.
     \end{equation*}
 
     We now prove the upper bound.
-    Note that for any~$p \ge 1$, we have~$\mathcal{B}_p(\Delta) \subseteq \mathcal{B}_{\infty}(\Delta)$, so that~$\Lambda_p \le \Lambda_{\infty}$.
+    For any~$p \ge 1$, we have~$\mathcal{B}_p(\Delta) \subseteq \mathcal{B}_{\infty}(\Delta)$, so that~$\Lambda_p \le \Lambda_{\infty}$.
     Therefore, we only need to show that~$\Lambda_{\infty} \le n$.
     Considering both~$\lagp[1]$ and~$-\lagp[1]$, we obtain
     \begin{equation*}
@@ -504,7 +504,7 @@ We now calculate the exact value of~$\Lambda_p$ in some special cases.
 
 \begin{proof}
     According to Theorem~\ref{thm:lambda-p},~$\Lambda_1$ is lower bounded by the right-hand side of~\eqref{eq:lambda-p-1}.
-    Therefore, we only need to prove that this right-hand side is also a lower bound for~$\Lambda_1$, using the formulation in Lemma~\ref{lem:lambda-p}.
+    Therefore, we only need to prove that this right-hand side is also a lower bound for~$\Lambda_1$, using Lemma~\ref{lem:lambda-p}.
 
     For any~$x \in \mathcal{B}_1(\Delta)$, we have
     \begin{equation*}
@@ -542,7 +542,7 @@ We now calculate the exact value of~$\Lambda_p$ in some special cases.
     We now focus on the case with~$n + 2 \le m < 2n + 1$.
 
     According to Theorem~\ref{thm:lambda-p},~$\Lambda_2$ is lower bounded by the right-hand side of~\eqref{eq:lambda-p-2}.
-    Therefore, we only need to prove that this right-hand side is also an upper bound for~$\Lambda_2$, using the formulation in Lemma~\ref{lem:lambda-p}.
+    Therefore, we only need to prove that this right-hand side is also an upper bound for~$\Lambda_2$, using Lemma~\ref{lem:lambda-p}.
 
     For any~$x \in \mathcal{B}_2(\Delta)$, we have
     \begin{align}
@@ -562,7 +562,7 @@ We now calculate the exact value of~$\Lambda_p$ in some special cases.
     \begin{equation*}
         \lagp[1](x) \le 1 + \sum_{j = m - n}^n \frac{\abs{x_j}}{\Delta} \le 1 + \sqrt{2n + 1 - m} \sum_{j = m - n}^n \frac{x_j^2}{\Delta^2} \le 1 + \sqrt{2n + 1 - m}.
     \end{equation*}
-    Therefore,~$\abs[\big]{\lagp[1](x)} \le 1 + \sqrt{2n + 1 - m}$, and hence, according to Lemma~\ref{lem:lambda-p} and Theorem~\ref{thm:lambda-p}, we have
+    Therefore,~$\abs[\big]{\lagp[1](x)} \le 1 + \sqrt{2n + 1 - m}$, and according to Lemma~\ref{lem:lambda-p} and Theorem~\ref{thm:lambda-p}, we have
     \begin{equation*}
         \Lambda_2 = \max_{\norm{x}_2 \le \Delta} \abs[\big]{\lagp[1](x)} = 1 + \sqrt{2n + 1 - m},
     \end{equation*}
@@ -626,10 +626,10 @@ Before developing the last special value of~$\Lambda_p$ we introduce the followi
 
 Note that~$\Lambda_p \ge 1$ for any~$p \ge 1$.
 Proposition~\ref{prop:lambda-p-opt} shows that~$\Lambda_p = 1$ for all~$p \in [1, 2]$.
-In this sense,~$\xpt[0]_{2n + 1}$ in an optimal interpolation set in~$\mathcal{B}_p(\Delta)$ for~$p \in [1, 2]$, because~$\Lambda_p$ attains its lower bound.
-The fact that~$\Lambda_p = 1$ for all~$p \in \set{1, 2}$ is in fact shown also by Propositions~\ref{prop:lambda-p-1} and~\ref{prop:lambda-p-2}.
+In this sense,~$\xpt[0]_{2n + 1}$ is an optimal interpolation set in~$\mathcal{B}_p(\Delta)$ for~$p \in [1, 2]$ because~$\Lambda_p$ attains its lower bound.
+The fact that~$\Lambda_p = 1$ for all~$p \in \set{1, 2}$ is, in fact, shown also by Propositions~\ref{prop:lambda-p-1} and~\ref{prop:lambda-p-2}.
 
-In addition,~$m = 2n + 1$ is optimal for~$\xpt[0]_m$ in the sense that~$\Lambda_p$ attains the lower bound~$1$ in such a case, when~$p \in [1, 2]$.
+In addition,~$m = 2n + 1$ is optimal for~$\xpt[0]_m$ in the sense that~$\Lambda_p$ attains the lower bound~$1$ in such a case when~$p \in [1, 2]$.
 We conjecture that~$\Lambda_p$ is minimized at the value~$m = 2n + 1$ for any~$p \ge 1$, but we do not have any proof of such a statement yet.
 
 Note that the definition of~$\xpt[0]_m$ in~\eqref{eq:set-def} and~\eqref{eq:set-def-m} assumes that~$m \le 2n + 1$.
@@ -641,10 +641,10 @@ One of the challenges is that Lemma~\ref{lem:lambda-p} does not hold in the case
 \section{Conclusion}
 
 This paper demonstrated that a natural choice made by Powell when designing \solvername{newuoa} is supported by the interpolation theory.
-In particular, we showed that an interpolation set he proposed for \solvername{newuoa} is optimal in the sense that it minimizes its constant of~$\Lambda$-poisedness in the initial trust region.
+In particular, we showed that the interpolation set he proposed for \solvername{newuoa} is optimal in the sense that it minimizes its constant of~$\Lambda$-poisedness in the initial trust region.
 
 \paragraph*{Disclosure statement}
-The authors report there are no competing interests to declare.
+The authors report that there are no competing interests to declare.
 
 \paragraph*{Funding}
 This work was supported by the University Grants Committee of Hong Kong under Grants PF18-24698 (Hong Kong Ph.D. Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P; and The Hong Kong Polytechnic University under Grant P0009767.
